virtual-office/paperless-ngx-smb/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-ngx-smb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx-consume-smb
  ingress:
    - fromEntities:
        - world
